[gd_scene load_steps=25 format=2]

[ext_resource path="res://Scenes/Battle.gd" type="Script" id=1]
[ext_resource path="res://Themes/BattleHPbar.tres" type="Theme" id=2]
[ext_resource path="res://Scenes/HPBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/AnimationEditor/AnimationDrawer.tscn" type="PackedScene" id=4]
[ext_resource path="res://Data/TiltNeon-Regular-VariableFont_XROT,YROT.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Sound/monster2.ogg" type="AudioStream" id=6]
[ext_resource path="res://Sound/click.ogg" type="AudioStream" id=7]
[ext_resource path="res://Images/pokemon/icons/0.png" type="Texture" id=8]

[sub_resource type="ShaderMaterial" id=1]

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.372549, 0.372549, 0.372549, 1 )
skew = Vector2( 0.2, 0 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.184314, 0.258824, 0.301961, 1 )
skew = Vector2( 0.2, 0 )
border_width_right = 65
border_color = Color( 0.470588, 0.215686, 0.215686, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.231373, 0.368627, 0.45098, 1 )
skew = Vector2( 0.2, 0 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.419608, 0.2, 0.2, 1 )
skew = Vector2( 0.2, 0 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.301961, 0.356863, 0.509804, 1 )
skew = Vector2( 0.346, 0 )
border_width_right = 127
border_color = Color( 0.321569, 0.160784, 0.678431, 0.827451 )
border_blend = true
corner_radius_bottom_right = 32
expand_margin_left = 34.0
expand_margin_right = 7.0
expand_margin_bottom = 14.0
shadow_color = Color( 0, 0, 0, 0.388235 )
shadow_size = 18

[sub_resource type="DynamicFont" id=2]
size = 22
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=12]
default_font = SubResource( 2 )
Button/colors/font_color_disabled = Color( 0.901961, 0.901961, 0.901961, 0.2 )
Button/fonts/font = SubResource( 4 )
Button/styles/disabled = SubResource( 10 )
Button/styles/focus = SubResource( 5 )
Button/styles/hover = SubResource( 6 )
Button/styles/normal = SubResource( 10 )
Button/styles/pressed = SubResource( 8 )
Label/colors/font_color = Color( 1, 1, 1, 1 )
Label/fonts/font = SubResource( 11 )
Panel/styles/panel = SubResource( 3 )

[sub_resource type="DynamicFont" id=9]
size = 12
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.301961, 0.356863, 0.509804, 1 )
skew = Vector2( -0.346, 0 )
border_width_right = 127
border_color = Color( 0.321569, 0.160784, 0.678431, 0.827451 )
border_blend = true
corner_radius_bottom_left = 32
expand_margin_left = 20.0
expand_margin_right = 34.0
expand_margin_bottom = 19.0
shadow_color = Color( 0, 0, 0, 0.388235 )
shadow_size = 18

[sub_resource type="Theme" id=14]
default_font = SubResource( 2 )
Label/colors/font_color = Color( 0, 0, 0, 1 )
Label/fonts/font = SubResource( 2 )
Panel/styles/panel = SubResource( 13 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0, 0, 0, 0.792157 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.137255, 0.164706, 0.207843, 1 )
skew = Vector2( 0.17, 0 )
border_width_left = 334
border_color = Color( 0.207843, 0.137255, 0.137255, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 112
corner_radius_bottom_right = 5
corner_radius_bottom_left = 112
expand_margin_left = 40.0
expand_margin_right = 40.0
shadow_color = Color( 0, 0, 0, 0.372549 )
shadow_size = 97

[node name="Battle" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Decoration" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Decoration"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -129.0
color = Color( 0.552941, 0.835294, 0.854902, 1 )

[node name="ColorRect2" type="ColorRect" parent="Decoration"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -133.0
color = Color( 0.113725, 0.113725, 0.113725, 1 )

[node name="PlayerGround" type="Polygon2D" parent="Decoration"]
position = Vector2( 431, 465 )
offset = Vector2( -462, -213 )
polygon = PoolVector2Array( 210, 205, 296, 98, 595, 100, 646, 199, 592, 301, 291, 300 )

[node name="PlayerPokemonHint" type="Position2D" parent="Decoration/PlayerGround"]
position = Vector2( -50, 44 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Decoration/PlayerGround"]

[node name="EnemyGround" type="Polygon2D" parent="Decoration"]
position = Vector2( 962, 282 )
offset = Vector2( -462, -213 )
polygon = PoolVector2Array( 210, 205, 296, 98, 595, 100, 646, 199, 592, 301, 291, 300 )

[node name="EnemyPokemonHint" type="Position2D" parent="Decoration/EnemyGround"]
material = SubResource( 1 )
position = Vector2( -50, 28 )

[node name="BattleFooter" type="HBoxContainer" parent="."]
anchor_top = 0.8225
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -0.200043
margin_right = -12.0
rect_min_size = Vector2( 0, 64 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="FooterText" type="Label" parent="BattleFooter"]
unique_name_in_owner = true
margin_right = 996.0
margin_bottom = 128.0
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 7 )
text = "Choose idot"

[node name="BattleControls" type="GridContainer" parent="BattleFooter"]
margin_left = 1000.0
margin_right = 1260.0
margin_bottom = 128.0
columns = 2

[node name="FightButton" type="Button" parent="BattleFooter/BattleControls"]
margin_right = 128.0
margin_bottom = 60.0
rect_min_size = Vector2( 128, 60 )
theme = ExtResource( 2 )
text = "Fight"

[node name="Label" type="Label" parent="BattleFooter/BattleControls/FightButton"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ItemButton" type="Button" parent="BattleFooter/BattleControls"]
margin_left = 132.0
margin_right = 260.0
margin_bottom = 60.0
rect_min_size = Vector2( 128, 60 )
theme = ExtResource( 2 )
text = "Item"

[node name="PokemonButton" type="Button" parent="BattleFooter/BattleControls"]
margin_top = 64.0
margin_right = 128.0
margin_bottom = 124.0
rect_min_size = Vector2( 128, 60 )
theme = ExtResource( 2 )
text = "Pokemon"

[node name="RunButton" type="Button" parent="BattleFooter/BattleControls"]
margin_left = 132.0
margin_top = 64.0
margin_right = 260.0
margin_bottom = 124.0
rect_min_size = Vector2( 128, 60 )
theme = ExtResource( 2 )
text = "Run"

[node name="FightMoves" type="GridContainer" parent="BattleFooter"]
visible = false
margin_left = 1000.0
margin_right = 1260.0
margin_bottom = 128.0
columns = 2

[node name="Move1" type="Button" parent="BattleFooter/FightMoves"]
margin_right = 128.0
margin_bottom = 60.0
rect_min_size = Vector2( 128, 60 )
theme = SubResource( 12 )
custom_fonts/font = SubResource( 9 )
disabled = true
text = "--"

[node name="Move2" type="Button" parent="BattleFooter/FightMoves"]
margin_left = 132.0
margin_right = 260.0
margin_bottom = 60.0
rect_min_size = Vector2( 128, 60 )
theme = SubResource( 12 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 0.329412 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
disabled = true
text = "--"

[node name="Move3" type="Button" parent="BattleFooter/FightMoves"]
margin_top = 64.0
margin_right = 128.0
margin_bottom = 124.0
rect_min_size = Vector2( 128, 60 )
theme = SubResource( 12 )
custom_fonts/font = SubResource( 4 )
disabled = true
text = "--"

[node name="Move4" type="Button" parent="BattleFooter/FightMoves"]
margin_left = 132.0
margin_top = 64.0
margin_right = 260.0
margin_bottom = 124.0
rect_min_size = Vector2( 128, 60 )
theme = SubResource( 12 )
custom_fonts/font = SubResource( 4 )
disabled = true
text = "--"

[node name="TextScroll" type="Tween" parent="BattleFooter"]

[node name="PlayerHPBar" parent="." instance=ExtResource( 3 )]
margin_left = 10.0
margin_top = 74.0
margin_right = 178.0
margin_bottom = 135.0
__meta__ = {
"_edit_group_": true
}

[node name="EnemyHPBar" parent="." instance=ExtResource( 3 )]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -187.0
margin_top = -287.0
margin_right = -19.0
margin_bottom = -226.0
theme = SubResource( 14 )
__meta__ = {
"_edit_group_": true
}

[node name="PokemonSwitcher" type="PopupDialog" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 17 )

[node name="SwitcherBG" type="Panel" parent="PokemonSwitcher"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -256.0
margin_right = 200.0
margin_bottom = 256.0
rect_min_size = Vector2( 400, 512 )
custom_styles/panel = SubResource( 18 )

[node name="SwitchContainer" type="VBoxContainer" parent="PokemonSwitcher/SwitcherBG"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
custom_constants/separation = 19
alignment = 1

[node name="SwitchButton" type="Button" parent="PokemonSwitcher/SwitcherBG/SwitchContainer"]
margin_top = 6.0
margin_right = 380.0
margin_bottom = 70.0
rect_min_size = Vector2( 0, 64 )
theme = ExtResource( 2 )
disabled = true
icon = ExtResource( 8 )
align = 0
expand_icon = true

[node name="SwitchButton2" type="Button" parent="PokemonSwitcher/SwitcherBG/SwitchContainer"]
margin_top = 89.0
margin_right = 380.0
margin_bottom = 153.0
rect_min_size = Vector2( 0, 64 )
theme = ExtResource( 2 )
disabled = true
align = 0
expand_icon = true

[node name="SwitchButton3" type="Button" parent="PokemonSwitcher/SwitcherBG/SwitchContainer"]
margin_top = 172.0
margin_right = 380.0
margin_bottom = 236.0
rect_min_size = Vector2( 0, 64 )
theme = ExtResource( 2 )
disabled = true
align = 0
expand_icon = true

[node name="SwitchButton4" type="Button" parent="PokemonSwitcher/SwitcherBG/SwitchContainer"]
margin_top = 255.0
margin_right = 380.0
margin_bottom = 319.0
rect_min_size = Vector2( 0, 64 )
theme = ExtResource( 2 )
disabled = true
align = 0
expand_icon = true

[node name="SwitchButton5" type="Button" parent="PokemonSwitcher/SwitcherBG/SwitchContainer"]
margin_top = 338.0
margin_right = 380.0
margin_bottom = 402.0
rect_min_size = Vector2( 0, 64 )
theme = ExtResource( 2 )
disabled = true
align = 0
expand_icon = true

[node name="SwitchButton6" type="Button" parent="PokemonSwitcher/SwitcherBG/SwitchContainer"]
margin_top = 421.0
margin_right = 380.0
margin_bottom = 485.0
rect_min_size = Vector2( 0, 64 )
theme = ExtResource( 2 )
disabled = true
align = 0
expand_icon = true

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 5.0

[node name="AnimationDrawer" parent="." instance=ExtResource( 4 )]

[connection signal="pressed" from="BattleFooter/BattleControls/FightButton" to="." method="_on_FightButton_pressed"]
[connection signal="pressed" from="BattleFooter/BattleControls/PokemonButton" to="." method="_on_PokemonButton_pressed"]
[connection signal="pressed" from="BattleFooter/BattleControls/RunButton" to="." method="_on_RunButton_pressed"]
